BasicServer - dataDirectory path added. Created ConfigurationManager interface to set the configuration of freemarker for Route classes.